Reset button functionality

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MineSweeper</title>
+    <script
+ 	src="https://code.jquery.com/jquery-3.2.1.min.js"
+ 	integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+ 	crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
     <link rel="stylesheet" href="css/main.css">
     <script defer src="js/main.js"></script>
 </head>
@@ -12,9 +17,9 @@
     <h3>Good Luck...</h3>
 
     <div id="bar">
-        <span id="minesLeft">000</span>
+        <span id="minesLeft">10</span>
         <button>RESET</button>
-        <span id="timer">000</span>
+        <span id="timer">00:00</span>
     </div>
 
     <section id="gameBoard">
@@ -108,6 +113,6 @@
         <div id="c7r0"></div>
         <div id="c8r0"></div>
 
-        </div>
+    </section>
 </body>
 </html>
