--- a/index.html
+++ b/index.html
@@ -16,102 +16,12 @@
     <h3>Good Luck...</h3>
 
     <div id="bar">
-        <span id="minesLeft">10</span>
+        <span id="minesLeft"></span>
         <button>RESET</button>
-        <span id="timer">00:00</span>
+        <span id="timer"></span>
     </div>
 
     <section id="gameBoard">
-
-        <!-- <div id="c0r0"></div>
-        <div id="c1r0"></div>
-        <div id="c2r0"></div>
-        <div id="c3r0"></div>
-        <div id="c4r0"></div>
-        <div id="c5r0"></div>
-        <div id="c6r0"></div>
-        <div id="c7r0"></div>
-        <div id="c8r0"></div>
-
-        <div id="c0r1"></div>
-        <div id="c1r1"></div>
-        <div id="c2r1"></div>
-        <div id="c3r1"></div>
-        <div id="c4r1"></div>
-        <div id="c5r1"></div>
-        <div id="c6r1"></div>
-        <div id="c7r1"></div>
-        <div id="c8r1"></div>
-
-        <div id="c0r2"></div>
-        <div id="c1r2"></div>
-        <div id="c2r2"></div>
-        <div id="c3r2"></div>
-        <div id="c4r2"></div>
-        <div id="c5r2"></div>
-        <div id="c6r2"></div>
-        <div id="c7r2"></div>
-        <div id="c8r2"></div>
-
-        <div id="c0r3"></div>
-        <div id="c1r3"></div>
-        <div id="c2r3"></div>
-        <div id="c3r3"></div>
-        <div id="c4r3"></div>
-        <div id="c5r3"></div>
-        <div id="c6r3"></div>
-        <div id="c7r3"></div>
-        <div id="c8r3"></div>
-
-        <div id="c0r4"></div>
-        <div id="c1r4"></div>
-        <div id="c2r4"></div>
-        <div id="c3r4"></div>
-        <div id="c4r4"></div>
-        <div id="c5r4"></div>
-        <div id="c6r4"></div>
-        <div id="c7r4"></div>
-        <div id="c8r4"></div>
-
-        <div id="c0r5"></div>
-        <div id="c1r5"></div>
-        <div id="c2r5"></div>
-        <div id="c3r5"></div>
-        <div id="c4r5"></div>
-        <div id="c5r5"></div>
-        <div id="c6r5"></div>
-        <div id="c7r5"></div>
-        <div id="c8r5"></div>
-
-        <div id="c0r6"></div>
-        <div id="c1r6"></div>
-        <div id="c2r6"></div>
-        <div id="c3r6"></div>
-        <div id="c4r6"></div>
-        <div id="c5r6"></div>
-        <div id="c6r6"></div>
-        <div id="c7r6"></div>
-        <div id="c8r6"></div>
-
-        <div id="c0r7"></div>
-        <div id="c1r7"></div>
-        <div id="c2r7"></div>
-        <div id="c3r7"></div>
-        <div id="c4r7"></div>
-        <div id="c5r7"></div>
-        <div id="c6r7"></div>
-        <div id="c7r7"></div>
-        <div id="c8r7"></div>
-
-        <div id="c0r8"></div>
-        <div id="c1r8"></div>
-        <div id="c2r8"></div>
-        <div id="c3r8"></div>
-        <div id="c4r8"></div>
-        <div id="c5r8"></div>
-        <div id="c6r8"></div>
-        <div id="c7r8"></div>
-        <div id="c8r8"></div> -->
 
     </section>
 </body>
