CSS looks and works well

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <script defer src="js/main.js"></script>
 </head>
 <body>
+    <div id="screen">
     <header>
-    <h1>Mine Sweeper</h1>
+    <h1>Minesweeper</h1>
     <h3>Good Luck...</h3>
 
     <div id="bar">
@@ -26,7 +27,6 @@
 
     <section id="buttons">
         <button id="s">Easy</button>
-        <button id="m">Medium</button>
         <button id="l">Hard</button>
     </section>
 
@@ -34,5 +34,6 @@
     <section id="gameBoard">
 
     </section>
+    </div>  
 </body>
 </html>
