JavaScript is much more clean

--- a/index.html
+++ b/index.html
@@ -12,16 +12,15 @@
     <script defer src="js/main.js"></script>
 </head>
 <body>
-    <div id="screen">
     <header>
-    <h1>Minesweeper</h1>
-    <h3>Good Luck...</h3>
+        <h1>Minesweeper</h1>
+        <h3>Good Luck...</h3>
 
-    <div id="bar">
-        <span id="minesLeft">0</span>
-        <button id="reset">RESET</button>
-        <span id="timer">00:00</span>
-    </div>
+        <div id="bar">
+            <span id="minesLeft">0</span>
+            <button id="reset">RESET</button>
+            <span id="timer">00:00</span>
+        </div>
 
     </header>
 
@@ -30,10 +29,9 @@
         <button id="l">Hard</button>
     </section>
 
-
-    <section id="gameBoard">
-
-    </section>
+    <div id="boardArea">
+        <section id="gameBoard">
+        </section>
     </div>  
 </body>
 </html>
